--- a/src/modules/user/components/user/user.component.html
+++ b/src/modules/user/components/user/user.component.html
@@ -1,3 +1,3 @@
-<button (click)="back()">Back</button>
+<button mat-button (click)="back()">Back</button>
 
 <app-user-data [user]="user"></app-user-data>
