--- a/src/modules/users-list/components/users-list/users-list.component.html
+++ b/src/modules/users-list/components/users-list/users-list.component.html
@@ -1,6 +1,6 @@
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z8" class="table__user-list">
   <table mat-table [dataSource]="userList">
-    <ng-container matColumnDef="first_name">
+    <ng-container matColumnDef="first_name" >
       <th mat-header-cell *matHeaderCellDef> First name </th>
       <td mat-cell *matCellDef="let element" (click)="userSelected(element)"> {{element.first_name}} </td>
     </ng-container>
@@ -14,5 +14,6 @@
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table><mat-paginator [pageSize]="3" [length]="pagesCount" (page)="pageChanged($event)"></mat-paginator>
+  </table>
+  <mat-paginator [pageSize]="3" [length]="pagesCount" (page)="pageChanged($event)"></mat-paginator>
 </div>
